--- a/my-react-app/src/Homepage/homepage.module.css
+++ b/my-react-app/src/Homepage/homepage.module.css
@@ -21,7 +21,7 @@
 }
 
 .sidebar a {
-  padding: 0 32px;
+  padding: 6px 6px 6px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -37,7 +37,6 @@
   text-align: center;
   margin-bottom: 10px;
   color: white;
-  cursor: pointer;
 }
 
 .homePageLogo {
@@ -59,51 +58,41 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #8860D0;
 }
 
 .searchBar {
   display: flex; 
-  align-items: center;
-  border: solid white; 
+  align-items: center; 
+  border: 2px solid black; 
   border-radius: 40px; 
-  padding: 5px 10px;
+  padding: 5px 10px; 
   position: relative; 
-  width: 100%;
+  width: 100%; 
   max-width: 600px;
-  background-color: white;
 }
 
 .searchBar input {
   flex-grow: 1;
   border: none; 
   outline: none;
-  padding: 10px;
+  padding: 10px; 
   font-family: 'Jura', sans-serif;
-}
-
-.searchTypeDropdown {
-  padding: 10px;
-  border-radius: 20px;
-  border: solid white;
-  background-color: #46beed;
-  font-family: 'Jura', sans-serif;
-  margin-right: 10px;
-  color: white;
 }
 
 .searchBar button {
   background-color: transparent;
   border: none;
   color: #8860D0;
-  font-size: 1.2rem;
+  font-size: 1.2rem; 
   cursor: pointer;
+  position: absolute;
+  right: 10px; 
 }
 
 .signOut {
   list-style: none;
   cursor: pointer;
-  color: white;
+  color: black;
   margin: 0;
 }
 
@@ -113,15 +102,16 @@
 
 .content {
   flex: 1;
-  padding: 20px;
+  padding: 30px;
   background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   position: relative;
+  margin-top:40px;
 }
 
 .createProjectButton {
-  background-color: #46beed; 
+  background-color: #84CEEB; 
   border: none;
   color: white;
   font-size: large;
@@ -133,11 +123,11 @@
   margin: 20px 0;
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  right: 20px
 }
 
 .createProjectButtonCenter {
-  background-color: #46beed; 
+  background-color: #84CEEB; 
   border: none;
   color: white;
   font-size: large;
@@ -161,38 +151,46 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+  cursor: default;
 }
 
 table th,
 table td {
+  cursor: default;
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
 }
 
 table th {
-  background-color: #8860D0;
-  color: white;
+  cursor: default;
+  background-color: yellow;
+  opacity: 50%;
+  color: black;
 }
 
 table tr:nth-child(even) {
+  cursor: pointer;
   background-color: #f2f2f2;
 }
 
 table tr:hover {
-  background-color: #ddd;
+  cursor: pointer;
+  background-color: #c1c8c4;
 }
 
 table .projectNameColumn {
   width: 80%;
+  cursor: pointer;
 }
 
 table .actionColumn {
   width: 20%;
+  cursor: pointer;
 }
 
 table tr td button {
-  background-color: #46beed;
+  background-color: #84CEEB;
   border: none;
   color: white;
   padding: 5px 10px;
@@ -215,5 +213,94 @@ table tr td button:hover {
   font-size: 1.2rem;
   margin-bottom: 20px;
 }
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  width: 300px;
+  text-align: center;
+}
+
+.inputField {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.modalActions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.searchTypeDropdown {
+  padding: 10px;
+  border-radius: 20px;
+  border: solid white;
+  background-color: #46beed;
+  font-family: 'Jura', sans-serif;
+  margin-right: -200px;
+  color: white;
+}
+
+.submitButton, .cancelButton {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submitButton {
+  color: white;
+}
+
+.cancelButton {
+  color: white;
+}
+
+.signOutContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 30%;
+  padding: 20px 0;
+}
+
+.signOut {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: black; 
+  font-size: 20px;
+  margin-top: -110px;
+  margin-right: -1800px;
+}
+
+.signOut img {
+  width: 20px; 
+  height: 20px; 
+  margin-right: 8px; 
+}
+
+.signOut:hover {
+  color: #8860D0; 
+}
+
 
 
