--- a/my-react-app/src/ProjectPage/projectpage.module.css
+++ b/my-react-app/src/ProjectPage/projectpage.module.css
@@ -21,7 +21,7 @@
 }
 
 .sidebar a {
-  padding: 0px 32px;
+  padding: 6px 6px 6px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -32,21 +32,11 @@
   color: #f1f1f1;
 }
 
-.filterSection {
-  margin-top: 10px;
-  padding-left: 10px;
-}
-
-.filterSection h2 {
-  color: white;
-}
-
 .homePagetitle {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 10px;
   color: white;
-  cursor: pointer;
 }
 
 .homePageLogo {
@@ -54,14 +44,14 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 50px;
-  width: 50px;
+  width: 30%;
 }
+
 
 label {
   display: block;
   margin-top: 10px;
-  color: white;
+  color: black;
 }
 
 input[type="checkbox"] {
@@ -70,7 +60,7 @@ input[type="checkbox"] {
 
 .mainContent {
   flex: 1;
-  padding: 20px;
+  padding: 30px;
   margin-left: 230px;
 }
 
@@ -79,45 +69,35 @@ input[type="checkbox"] {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #8860D0;
 }
 
 .searchBar {
   display: flex; 
-  align-items: center; 
-  border: solid white;
-  border-radius: 40px;
+  align-items: center;
+  border: 2px solid black; 
+  border-radius: 40px; 
   padding: 5px 10px; 
   position: relative; 
-  width: 100%;
+  width: 100%; 
   max-width: 600px;
-  background-color: white;
 }
 
 .searchBar input {
   flex-grow: 1;
   border: none; 
   outline: none;
-  padding: 10px;
+  padding: 10px; 
   font-family: 'Jura', sans-serif;
-}
-
-.searchTypeDropdown {
-  padding: 10px;
-  border-radius: 20px;
-  border: solid white;
-  background-color: #46beed;
-  font-family: 'Jura', sans-serif;
-  margin-right: 10px;
-  color: white;
 }
 
 .searchBar button {
   background-color: transparent;
   border: none;
   color: #8860D0;
-  font-size: 1.2rem;
+  font-size: 1.2rem; 
   cursor: pointer;
+  position: absolute; 
+  right: 10px; 
 }
 
 .signOut {
@@ -133,15 +113,16 @@ input[type="checkbox"] {
 
 .content {
   flex: 1;
-  padding: 20px;
+  padding: 30px;
   background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   position: relative;
+  margin-top: 30px;
 }
 
 .uploadButton {
-  background-color: #46beed; 
+  background-color: #84CEEB; 
   border: none;
   color: white;
   font-size: large;
@@ -158,7 +139,7 @@ input[type="checkbox"] {
 }
 
 .uploadButtonRight {
-  background-color: #46beed; 
+  background-color: #84CEEB; 
   border: none;
   color: white;
   font-size: large;
@@ -233,9 +214,81 @@ input[type="checkbox"] {
   margin-top: 20px;
 }
 
+.filterIcon {
+  width: 53px;
+  height: 53px;
+  cursor: pointer;
+  margin-left: 450px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.filterModal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  transition: transform 0.3s ease;
+  transform: translateX(100%);
+}
+
+.filtersText {
+  text-align: center;
+}
+
+.filterModalOpen {
+  transform: translateX(0);
+}
+
+.filterModalContent {
+  padding: 20px;
+}
+
+.filterModalFooter {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.filterButton {
+  background-color:#fefba9  ;
+  border: none;
+  color: black;
+  font-size: large;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: 'Jura', sans-serif;
+  margin-left: 10px;
+}
+
+.filterButton:hover {
+  background-color: yellow;
+}
+
+.filterOptions {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.filterOptions label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.filterOptions input[type="checkbox"] {
+  margin-right: 5px;
+}
+
 .sortSection {
   margin-top: 20px;
-  color: white;
 }
 
 .sortSection select {
@@ -244,16 +297,9 @@ input[type="checkbox"] {
   padding: 5px;
   border-radius: 5px;
   border: none;
-}
-
-.mediaName {
-  margin-top: 10px;
-  text-align: center;
-}
-
-.uploadButtonContiainer {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 20px;
+  width: 100%;
+  background-color: #f9f9f9;
+  color: #333;
+  font-family: 'Jura', sans-serif;
 }
 
