--- a/my-react-app/src/Homepage/homepage.module.css
+++ b/my-react-app/src/Homepage/homepage.module.css
@@ -8,6 +8,7 @@
   min-height: 100vh;
 }
 
+/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar {
   height: 100%;
   width: 230px;
@@ -20,6 +21,7 @@
   padding-top: 20px;
 }
 
+/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar a {
   padding: 6px 6px 6px 32px;
   text-decoration: none;
@@ -28,6 +30,7 @@
   display: block;
 }
 
+/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar a:hover {
   color: #f1f1f1;
 }
