--- a/my-react-app/src/PhotoDetails/photodetails.module.css
+++ b/my-react-app/src/PhotoDetails/photodetails.module.css
@@ -159,7 +159,7 @@
 
 .similarImagesContainer {
   width: 100%;
-  background-color: #5680E9;
+  background-color: #fefba9;
   padding: 10px;
   border-radius: 8px;
   margin-top: 20px;
