--- a/my-react-app/src/ProjectPage/projectpage.module.css
+++ b/my-react-app/src/ProjectPage/projectpage.module.css
@@ -8,6 +8,7 @@
   min-height: 100vh;
 }
 
+/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar {
   height: 100%;
   width: 230px;
@@ -20,6 +21,7 @@
   padding-top: 20px;
 }
 
+/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar a {
   padding: 6px 6px 6px 32px;
   text-decoration: none;
@@ -28,6 +30,7 @@
   display: block;
 }
 
+/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar a:hover {
   color: #f1f1f1;
 }
@@ -149,7 +152,7 @@ input[type="checkbox"] {
   font-family: 'Jura', sans-serif;
   text-align: center;
   position: fixed;
-  bottom: 20px;
+  bottom: 100px;
   right: 20px;
 }
 
@@ -162,6 +165,7 @@ input[type="checkbox"] {
   gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   position: relative;
+  cursor: pointer;
 }
 
 .mediaItem {
