--- a/my-react-app/src/SearchPage/searchpage.module.css
+++ b/my-react-app/src/SearchPage/searchpage.module.css
@@ -79,13 +79,11 @@ input[type="checkbox"] {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #8860D0;
 }
-
 .searchBar {
   display: flex; 
   align-items: center; 
-  border: solid white;
+  border: 2px solid black;
   border-radius: 40px;
   padding: 5px 10px; 
   position: relative; 
@@ -108,7 +106,7 @@ input[type="checkbox"] {
   border: solid white;
   background-color: #46beed;
   font-family: 'Jura', sans-serif;
-  margin-right: 10px;
+  margin-right: 0px;
   color: white;
 }
 
@@ -120,16 +118,31 @@ input[type="checkbox"] {
   cursor: pointer;
 }
 
-.signOut {
-  list-style: none;
-  cursor: pointer;
-  color: white;
-  margin: 0;
+.signOutContainer {
+  margin-top: 550px; 
+  padding: 20px; 
 }
+
+.signOut {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: black;
+  font-size: larger;
+}
+
+.signOut img {
+  width: 16px; 
+  height: 16px; 
+  margin-right: 8px; 
+  vertical-align: middle; 
+}
+
 
 .signOut:hover {
   text-decoration: underline;
 }
+
 
 .content {
   flex: 1;
@@ -197,9 +210,85 @@ input[type="checkbox"] {
   margin-top: 20px;
 }
 
+.filtersContainer {
+  margin-left: 100px;
+
+}
+
+.filterIcon {
+  width: 53px;
+  height: 53px;
+  cursor: pointer;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.filterModal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  transition: transform 0.3s ease;
+  transform: translateX(100%);
+}
+
+.filtersText {
+  text-align: center;
+}
+
+.filterModalOpen {
+  transform: translateX(0);
+}
+
+.filterModalContent {
+  padding: 20px;
+}
+
+.filterModalFooter {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.filterButton {
+  background-color:#fefba9;
+  border: none;
+  color: black;
+  font-size: large;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: 'Jura', sans-serif;
+  margin-left: 10px;
+}
+
+.filterButton:hover {
+  background-color: yellow;
+}
+
+.filterOptions {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.filterOptions label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.filterOptions input[type="checkbox"] {
+  margin-right: 5px;
+}
+
 .sortSection {
   margin-top: 20px;
-  color: white;
 }
 
 .sortSection select {
@@ -208,10 +297,16 @@ input[type="checkbox"] {
   padding: 5px;
   border-radius: 5px;
   border: none;
+  width: 100%;
+  background-color: #f9f9f9;
+  color: #333;
+  font-family: 'Jura', sans-serif;
 }
+
 
 .mediaName {
   margin-top: 10px;
   text-align: center;
 }
+
 
