--- a/my-react-app/src/VideoDetails/videodetails.module.css
+++ b/my-react-app/src/VideoDetails/videodetails.module.css
@@ -6,9 +6,9 @@
   background-color: white;
   width: 100%;
   min-height: 100vh;
+  overflow-y: auto; 
 }
 
-/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar {
   height: 100%;
   width: 230px;
@@ -21,7 +21,6 @@
   padding-top: 20px;
 }
 
-/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar a {
   padding: 0px 32px;
   text-decoration: none;
@@ -30,7 +29,6 @@
   display: block;
 }
 
-/* sidebar code inspired from w3schools "W3.CSS sidebar*/
 .sidebar a:hover {
   color: #f1f1f1;
 }
@@ -57,20 +55,21 @@
   margin-left: 230px;
 }
 
-.imageWithMetadata {
+.videoWithMetadata {
   display: flex;
   justify-content: flex-start;
   gap: 40px;
 }
 
-.imageContainer {
+.videoContainer {
   text-align: center;
 }
 
-.mainImage {
-  width: 100%;
-  max-width: 600px;
-  border-radius: 8px;
+.mainVideo {
+  width: 600px; 
+  height: 450px; 
+  object-fit: cover; 
+  border-radius: 9px;
   margin-bottom: 20px;
 }
 
@@ -101,7 +100,7 @@
 }
 
 .titleInput, .dropdown, .tagInput {
-  width: 100%;
+  width: 600px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -116,15 +115,18 @@
   border-radius: 8px;
   padding: 15px;
   background-color: #f9f9f9;
-  width: 100%;
-  max-width: 600px;
+  width: 600px;
+  height: 200px;
+  display: flex;
+  flex-direction: column; 
 }
 
 .tagsContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-top: 10px;
+  gap: 15px;
+  margin-top: auto; 
+  overflow-y: auto; 
 }
 
 .tagButton {
@@ -134,10 +136,6 @@
   border-radius: 3px;
   padding: 8px 12px;
   cursor: pointer;
-}
-
-.tagButton:hover {
-  background-color: #4762b7;
 }
 
 .descriptionContainer {
@@ -170,7 +168,7 @@
   align-items: center;
 }
 
-.audioImage img {
+.audiovideo img {
   width: 150px;
   height: 150px;
   object-fit: cover;
@@ -199,14 +197,15 @@
 .buttonGroup {
   display: flex;
   gap: 10px;
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-left: 1050px;
 }
 
 .saveButton, .deleteButton {
   background-color: #46beed;
   border: none;
   color: white;
-  padding: 15px 30px;
+  padding: 10px 25px;
   border-radius: 4px;
   cursor: pointer;
   font-size: 1rem;
@@ -220,4 +219,9 @@
 
 .deleteButton:hover {
   background-color: #d14f4f;
+}
+
+.backLink {
+  font-size: large;
+  color: #5680E9;
 }
